# internal/handler/accounts/get.go
@@ -1,8 +1,9 @@
 package accounts
 
 import (
-	"fmt"
 	"github.com/Nerzal/gocloak/v13"
+	"github.com/google/jsonapi"
+	"gitlab.ci.fdmg.org/ci-api/admin-api/internal"
 	"gitlab.ci.fdmg.org/ci-api/admin-api/internal/keycloak"
 	"gitlab.ci.fdmg.org/datacluster/golibs/goskell"
 	"gitlab.ci.fdmg.org/datacluster/golibs/goskell/json/problem"
@@ -16,53 +17,123 @@ const (
 	checkTypeValue string = "api"
 )
 
-type Response struct {
-	Groups []Group
-}
-type Group struct {
-	KeycloakAccountId  *string
-	KeycloakCustomerId *string
-	ActorId            string
-	CustomerName       string
+// KeycloakAccount is used to fetch all groups from Keycloak
+type KeycloakAccount struct {
+	KeycloakAccountID            *string
+	KeycloakAccountSalesforceId  string
+	KeycloakCustomerID           *string
+	KeycloakCustomerSalesforceId string
+	CustomerName                 string
+	AccountName                  string
 }
 
-// GetGroup looks at the first subgroup of the main and tries
+// Account is the base data element
+type Account struct {
+	ID           string    `jsonapi:"primary,accounts"`
+	Customers    *Customer `jsonapi:"relation,customer"`
+	Name         string    `jsonapi:"attr,name"`
+	SalesforceID string    `jsonapi:"attr,salesforceID"`
+}
+
+// Customer is in relation to an api account
+type Customer struct {
+	ID           string `jsonapi:"primary,customer"`
+	Name         string `jsonapi:"attr,name"`
+	SalesforceID string `jsonapi:"attr,salesforceID"`
+}
+
+// GET handles GET requests on the endpoint.
+func (h *Handler) GET(ctx *goskell.Context) {
+
+	// Fetch
+	keycloakGroups, err := h.keycloakClient.GetGroups(ctx)
+	if err != nil {
+		goskell.ProblemJSON(
+			ctx,
+			problem.Details{
+				Title:  http.StatusText(http.StatusBadRequest),
+				Status: http.StatusBadRequest,
+				Detail: err.Error(),
+			},
+		)
+		return
+	}
+	// Fill the response with the data
+	groups := parseGroups(keycloakGroups)
+	// Sort in descending alphabetic order
+	sort.Slice(groups, func(i, j int) bool {
+		return groups[i].CustomerName < groups[j].CustomerName
+	})
+	// Build response from groups
+	response, err := jsonapi.Marshal(buildResponse(groups))
+	if err != nil {
+		goskell.ProblemJSON(
+			ctx,
+			problem.Details{
+				Title:  http.StatusText(http.StatusInternalServerError),
+				Status: http.StatusInternalServerError,
+				Detail: err.Error(),
+			},
+		)
+		return
+	}
+	// Return JSONAPI
+	internal.WriteJSONAPIResponse(ctx, response, http.StatusOK, nil)
+}
+
+// buildResponse Returns a list of Accounts based on the keycloak groups
+func buildResponse(groups []*KeycloakAccount) []*Account {
+	var accounts []*Account
+	// Iterate all keycloak groups
+	for _, group := range groups {
+		// Add the main level, api account
+		account := Account{}
+		account.ID = *group.KeycloakAccountID
+		account.Name = group.AccountName
+		account.SalesforceID = group.KeycloakAccountSalesforceId
+		// Add relationship to api account -> customer
+		customer := Customer{}
+		customer.ID = *group.KeycloakCustomerID
+		customer.Name = group.CustomerName
+		customer.SalesforceID = group.KeycloakCustomerSalesforceId
+		// Add customer
+		account.Customers = &customer
+		accounts = append(accounts, &account)
+	}
+	// Return
+	return accounts
+}
+
+// parseGroups looks at the first subgroup of the main and tries
 // to find groups that have attribute `type` = `api`. It only goes one level down
 // from the main group.
-func GetGroup(group []*gocloak.Group) []*Group {
+func parseGroups(group []*gocloak.Group) []*KeycloakAccount {
 	// Return
-	var groups []*Group
+	var groups []*KeycloakAccount
 	// iterate the main groups
 	for i := 0; i < len(group); i++ {
 		// Set main group variables used for the subgroups
 		customerName := group[i].Name
 		customerID := group[i].ID
+		customerSalesforceId := getSalesforceId(group[i])
 		// Iterate subgroup
 		sub := *group[i].SubGroups
 		for s := 0; s < len(sub); s++ {
-
 			// validate
 			if isApiAccount(sub[s]) {
-				groups = append(groups, &Group{
-					CustomerName:       fmt.Sprintf("%s - %s", *customerName, *sub[s].Name),
-					KeycloakAccountId:  sub[s].ID,
-					KeycloakCustomerId: customerID,
-					ActorId:            getActorId(&sub[s]),
+				groups = append(groups, &KeycloakAccount{
+					CustomerName:                 *customerName,
+					KeycloakCustomerSalesforceId: customerSalesforceId,
+					AccountName:                  *sub[s].Name,
+					KeycloakAccountSalesforceId:  getSalesforceId(&sub[s]),
+					KeycloakAccountID:            sub[s].ID,
+					KeycloakCustomerID:           customerID,
 				})
 			}
 		}
 	}
 	// Return
 	return groups
-}
-
-func getActorId(group *gocloak.Group) string {
-	attr, err := keycloak.ToGroupAttributes(*group.Attributes)
-	if err != nil {
-		return ""
-	}
-
-	return attr.ActorID
 }
 
 // isApiAccount determines if the keycloak group is api account
@@ -79,28 +150,11 @@ func isApiAccount(group gocloak.Group) bool {
 	return false
 }
 
-// GET handles GET requests on the endpoint.
-func (h *Handler) GET(ctx *goskell.Context) {
-	// Fetch
-	resp, err := h.keycloakClient.GetGroups(ctx)
+func getSalesforceId(group *gocloak.Group) string {
+	attr, err := keycloak.ToGroupAttributes(*group.Attributes)
 	if err != nil {
-		goskell.ProblemJSON(
-			ctx,
-			problem.Details{
-				Title:  http.StatusText(http.StatusBadRequest),
-				Status: http.StatusBadRequest,
-				Detail: err.Error(),
-			},
-		)
-		return
+		return ""
 	}
 
-	// Fill the response with the data
-	groups := GetGroup(resp)
-	// Sort
-	sort.Slice(groups, func(i, j int) bool {
-		return groups[i].CustomerName < groups[j].CustomerName
-	})
-	// return
-	ctx.JSON(http.StatusOK, groups)
+	return attr.SalesforceID
 }
